latest/quality/clang_tidy/lola_get_num_new_samples_benchmarks.cpp.AspectRulesLintClangTidy.out
9207 warnings generated.
/home/runner/.bazel/sandbox/linux-sandbox/4254/execroot/_main/score/mw/com/performance_benchmarks/api_microbenchmarks/lola_get_num_new_samples_benchmarks.cpp:132:15: error: Value stored to '_' during its initialization is never read [clang-analyzer-deadcode.DeadStores,-warnings-as-errors]
  132 |     for (auto _ : state)
      |               ^ ~
/home/runner/.bazel/sandbox/linux-sandbox/4254/execroot/_main/score/mw/com/performance_benchmarks/api_microbenchmarks/lola_get_num_new_samples_benchmarks.cpp:132:15: note: Value stored to '_' during its initialization is never read
  132 |     for (auto _ : state)
      |               ^ ~
Suppressed 9398 warnings (9196 in non-user code, 192 NOLINT, 10 with check filters).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
1 warning treated as error
